# protocol_monitor

./: .env.example  .gitignore  Dockerfile  RAILWAY.md  README.md  docker-compose.yml  pyproject.toml  railway.manual.toml  railway.toml  requirements.txt
app/: __init__.py  main.py
app/backtest/: __init__.py  binance_archive.py  engine.py  orb.py  walk_forward.py
app/config/: loader.py  settings.py
app/connectors/: base.py  binance_futures.py
app/indicators/: atr.py  cvd.py  macd.py  structure.py  vwap.py
app/llm/: config.py  deepseek.py  openai_compatible.py
app/market/: __init__.py  data_bus.py  kline_store.py  models.py  xnys_calendar.py
app/notifications/: base.py  feishu.py  telegram.py
app/review/: __init__.py  equity_sectors.py  (+6 more)
configs/: equity_sectors.yaml  symbols.yaml  system.yaml
docs/: INDICATORS.md
protocols/: crypto_smartmoney_protocol_v16.md  equity_smartmoney_protocol_v17.md
scripts/: run_monitor.ps1  run_periodic_report.ps1
tests/: conftest.py  test_atr.py  test_backtest.py  test_binance_archive.py  test_binance_connector.py  test_btc_filter.py  test_cooldown.py  test_crypto_micro_rules.py  test_cvd.py  test_deepseek_client.py  test_equity_sectors.py  test_equity_sessions.py  test_feishu.py  test_indicator_snapshot.py  test_kline_storage.py  test_llm_client.py  test_llm_decision.py  test_portfolio_risk.py  test_protocol_fallback.py  test_railway_config.py  test_report_schedule.py  test_reporter.py  test_rr.py  test_signal_lifecycle.py  test_stops.py  test_strategies.py  test_structure.py  test_time_stop.py  test_walk_forward.py
(+36 files in other folders)
